fixed filepaths in style scss file

--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -70,10 +70,11 @@ sass/
 // Layout
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/about';
 
 //Pages
-@import 'pages/about';
 @import 'pages/about-us';
+
 /*
 =========================
 General
