basic html and styling of find-gemstone page

--- a/themes/daria-day/sass/abstracts/_variables.scss
+++ b/themes/daria-day/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $menu-spacing: 10px;
 $menu-border-size: 2px;
 
 // Colours
+$brand-colour-bright-green: #269a65; 
 $brand-colour-green: #0c5535;
 $brand-colour-evergreen: #062b35;
 
