basic ajax functionality call of find-gemstone, basic filter built, added basic dropdown functionality

--- a/themes/daria-day/sass/abstracts/_variables.scss
+++ b/themes/daria-day/sass/abstracts/_variables.scss
@@ -7,6 +7,8 @@ $mobile-nav-height: 54px;
 $menu-spacing: 10px;
 $menu-border-size: 2px;
 
+$find-gemstone-input-margin: 5px;
+
 // Colours
 $brand-colour-bright-green: #269a65; 
 $brand-colour-green: #0c5535;
