--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -524,14 +524,14 @@ template {
   .latest-additions-item a {
     text-decoration: none; }
 
-.filter-energy-tag {
+.filter-energy-tag, .filter-gemstone-tag {
   font-weight: bold;
   border: none;
   background: white; }
 
 .filter-dropdown {
   position: absolute;
-  top: 50%;
+  top: 35%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%); }
 
@@ -573,9 +573,12 @@ template {
       -ms-flex-direction: column;
           flex-direction: column; }
 
-.seat.selected {
+.selected {
   background-color: lightblue;
   color: white; }
+
+.selectedVals {
+  display: none; }
 
 #footer {
   margin-top: 6%;
