made find-your-gemstone page more robust, made adding values easier, added error message, reselect and deselect

--- a/themes/daria-day/sass/abstracts/_variables.scss
+++ b/themes/daria-day/sass/abstracts/_variables.scss
@@ -8,6 +8,7 @@ $menu-spacing: 10px;
 $menu-border-size: 2px;
 
 $find-gemstone-input-margin: 5px;
+$find-gemstone-base-spacing: 10px;
 
 // Colours
 $brand-colour-bright-green: #269a65; 
