--- a/themes/daria-day/sass/pages/_find-gemstone.scss
+++ b/themes/daria-day/sass/pages/_find-gemstone.scss
@@ -67,13 +67,13 @@ Find Gemstone Search Styling
           border-radius: 5px;
           font-size: 0.75em;
         }
+
+        .selected-tag {
+          background-color: $brand-colour-evergreen;
+          color: white;
+        }
       }
     }
-  }
-
-  // dropdown styling
-  .dropdown-position-holder {
-
   }
 
   .find-gem-dropdown {
@@ -108,3 +108,17 @@ Find Gemstone Search Styling
 Find Gemstone Results Styling
 =========================
 */
+
+.find-gemstone-results {
+  h2 {
+    text-align: center;
+  }
+
+  .display-product-results {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: $find-gemstone-base-spacing * 2;
+  
+    padding: $find-gemstone-base-spacing;
+  }
+}
