basic filter functionality completed

--- a/themes/daria-day/sass/abstracts/_variables.scss
+++ b/themes/daria-day/sass/abstracts/_variables.scss
@@ -10,6 +10,8 @@ $menu-border-size: 2px;
 $find-gemstone-input-margin: 5px;
 $find-gemstone-base-spacing: 10px;
 
+$base-spacing: 10px;
+
 // Colours
 $brand-colour-bright-green: #269a65; 
 $brand-colour-green: #0c5535;
