--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -75,6 +75,7 @@ sass/
 //Pages
 @import 'pages/about-us';
 @import 'pages/find-gemstone';
+@import 'pages/shop-all';
 
 /*
 =========================
