--- a/themes/daria-day/sass/pages/_find-gemstone.scss
+++ b/themes/daria-day/sass/pages/_find-gemstone.scss
@@ -44,6 +44,12 @@ Find Gemstone Search Styling
     }
   }
 
+
+  /*
+  =========================
+  Dropdown Styling
+  =========================
+  */
   .dropdown-position-holder {
     &:hover,
     &:active,
