--- a/themes/daria-day/sass/pages/_find-gemstone.scss
+++ b/themes/daria-day/sass/pages/_find-gemstone.scss
@@ -13,10 +13,15 @@ Find Gemstone Search Styling
 
 
 .find-gemstone-search {
+  padding: 120px 0;
+
   color: $brand-colour-evergreen;
+  border: $find-gemstone-base-spacing solid $brand-colour-bright-green;
 
   h1 {
-    margin: 60px auto;
+    margin: 0;
+    margin-bottom: 40px;
+    text-align: center;
   }
 
   form {
@@ -28,6 +33,15 @@ Find Gemstone Search Styling
       justify-content: center;
 
       margin: 10px;
+      white-space: nowrap;
+
+      &:nth-of-type(1) {
+        margin-left: $find-gemstone-base-spacing * 3;
+      }
+
+      &:nth-of-type(2) {
+        margin-left: $find-gemstone-base-spacing * 2;
+      }
 
       div {
         position: relative;
@@ -35,6 +49,8 @@ Find Gemstone Search Styling
     }
 
     input {
+      width: 100%;
+      max-width: 200px;
       margin-left: $find-gemstone-input-margin;
 
       background-color: transparent;
@@ -44,12 +60,38 @@ Find Gemstone Search Styling
     }
   }
 
+  button {
+    display: block;
+    width: 181px;
+    margin: 60px auto 30px;
+    padding: $find-gemstone-base-spacing;
 
-  /*
-  =========================
-  Dropdown Styling
-  =========================
-  */
+    background-color: black;
+    border: 0px solid transparent;
+    color: white;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .find-gemstone-search {
+    border: $find-gemstone-base-spacing * 2 solid $brand-colour-bright-green;
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .find-gemstone-search {
+    border: $find-gemstone-base-spacing * 3 solid $brand-colour-bright-green;
+  }
+}
+
+/*
+=========================
+Dropdown Styling
+=========================
+*/
+
+ .find-gemstone-search {
+
   .dropdown-position-holder {
     &:hover,
     &:active,
@@ -99,13 +141,14 @@ Find Gemstone Search Styling
     border-top: 2px solid $brand-colour-bright-green;
     background-color: white;
   }
+}
 
-  
-
-  button {
-    display: block;
-    width: 181px;
-    margin: 60px auto;
+// special dropdown size for super small screens
+@media screen and (max-width: 365px) {
+  .find-gemstone-search {
+    .find-gem-dropdown {
+      width: 150px;
+    }
   }
 }
 
@@ -126,5 +169,50 @@ Find Gemstone Results Styling
     grid-gap: $find-gemstone-base-spacing * 2;
   
     padding: $find-gemstone-base-spacing;
+  }
+
+  .product-result {
+    position: relative;
+  }
+
+  a {
+    color: $brand-colour-evergreen;
+
+    h3 {
+      margin-bottom: $find-gemstone-base-spacing * 3;
+    }
+
+    p {
+      position: absolute;
+      bottom: 0;
+
+      margin: 0;
+
+      color: $brand-colour-green;
+
+      &:before {
+        content: '$';
+      }
+
+      &:after {
+        content: ' CAD';
+      }
+    }
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .find-gemstone-results {
+    .display-product-results {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media screen and (min-width: $larger-tablet) {
+  .find-gemstone-results {
+    .display-product-results {
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
 }
