--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -1132,14 +1132,13 @@ Find Gemstone Search Styling
 =========================
 */
 .find-gemstone-search {
+  padding: 120px 0;
   color: #062b35;
-  /*
-  =========================
-  Dropdown Styling
-  =========================
-  */ }
+  border: 10px solid #269a65; }
   .find-gemstone-search h1 {
-    margin: 60px auto; }
+    margin: 0;
+    margin-bottom: 40px;
+    text-align: center; }
   .find-gemstone-search form > div {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1151,54 +1150,85 @@ Find Gemstone Search Styling
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin: 10px; }
+    margin: 10px;
+    white-space: nowrap; }
+    .find-gemstone-search form > div:nth-of-type(1) {
+      margin-left: 30px; }
+    .find-gemstone-search form > div:nth-of-type(2) {
+      margin-left: 20px; }
     .find-gemstone-search form > div div {
       position: relative; }
   .find-gemstone-search form input {
+    width: 100%;
+    max-width: 200px;
     margin-left: 5px;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #269a65;
     text-align: center; }
-  .find-gemstone-search .dropdown-position-holder:hover .find-gem-dropdown, .find-gemstone-search .dropdown-position-holder:active .find-gem-dropdown, .find-gemstone-search .dropdown-position-holder:focus .find-gem-dropdown {
-    display: block; }
-  .find-gemstone-search .dropdown-position-holder:hover .find-tag-dropdown, .find-gemstone-search .dropdown-position-holder:active .find-tag-dropdown, .find-gemstone-search .dropdown-position-holder:focus .find-tag-dropdown {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap; }
-    .find-gemstone-search .dropdown-position-holder:hover .find-tag-dropdown li, .find-gemstone-search .dropdown-position-holder:active .find-tag-dropdown li, .find-gemstone-search .dropdown-position-holder:focus .find-tag-dropdown li {
-      margin: 2px;
-      margin-right: 5px;
-      padding: 0 5px;
-      background-color: #e1e1e1;
-      border: 0px solid transparent;
-      border-radius: 5px;
-      font-size: 0.75em; }
-    .find-gemstone-search .dropdown-position-holder:hover .find-tag-dropdown .selected-tag, .find-gemstone-search .dropdown-position-holder:active .find-tag-dropdown .selected-tag, .find-gemstone-search .dropdown-position-holder:focus .find-tag-dropdown .selected-tag {
-      background-color: #062b35;
-      color: white; }
-  .find-gemstone-search .find-gem-dropdown {
-    display: none;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    z-index: 1;
-    position: absolute;
-    top: 20px;
-    left: 5px;
-    width: 200px;
-    padding: 10px;
-    margin: 0;
-    border: 1px solid #269a65;
-    border-top: 2px solid #269a65;
-    background-color: white; }
   .find-gemstone-search button {
     display: block;
     width: 181px;
-    margin: 60px auto; }
+    margin: 60px auto 30px;
+    padding: 10px;
+    background-color: black;
+    border: 0px solid transparent;
+    color: white; }
+
+@media screen and (min-width: 600px) {
+  .find-gemstone-search {
+    border: 20px solid #269a65; } }
+
+@media screen and (min-width: 1024px) {
+  .find-gemstone-search {
+    border: 30px solid #269a65; } }
+
+/*
+=========================
+Dropdown Styling
+=========================
+*/
+.find-gemstone-search .dropdown-position-holder:hover .find-gem-dropdown, .find-gemstone-search .dropdown-position-holder:active .find-gem-dropdown, .find-gemstone-search .dropdown-position-holder:focus .find-gem-dropdown {
+  display: block; }
+
+.find-gemstone-search .dropdown-position-holder:hover .find-tag-dropdown, .find-gemstone-search .dropdown-position-holder:active .find-tag-dropdown, .find-gemstone-search .dropdown-position-holder:focus .find-tag-dropdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap; }
+  .find-gemstone-search .dropdown-position-holder:hover .find-tag-dropdown li, .find-gemstone-search .dropdown-position-holder:active .find-tag-dropdown li, .find-gemstone-search .dropdown-position-holder:focus .find-tag-dropdown li {
+    margin: 2px;
+    margin-right: 5px;
+    padding: 0 5px;
+    background-color: #e1e1e1;
+    border: 0px solid transparent;
+    border-radius: 5px;
+    font-size: 0.75em; }
+  .find-gemstone-search .dropdown-position-holder:hover .find-tag-dropdown .selected-tag, .find-gemstone-search .dropdown-position-holder:active .find-tag-dropdown .selected-tag, .find-gemstone-search .dropdown-position-holder:focus .find-tag-dropdown .selected-tag {
+    background-color: #062b35;
+    color: white; }
+
+.find-gemstone-search .find-gem-dropdown {
+  display: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  z-index: 1;
+  position: absolute;
+  top: 20px;
+  left: 5px;
+  width: 200px;
+  padding: 10px;
+  margin: 0;
+  border: 1px solid #269a65;
+  border-top: 2px solid #269a65;
+  background-color: white; }
+
+@media screen and (max-width: 365px) {
+  .find-gemstone-search .find-gem-dropdown {
+    width: 150px; } }
 
 /*
 =========================
@@ -1213,6 +1243,31 @@ Find Gemstone Results Styling
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
   padding: 10px; }
+
+.find-gemstone-results .product-result {
+  position: relative; }
+
+.find-gemstone-results a {
+  color: #062b35; }
+  .find-gemstone-results a h3 {
+    margin-bottom: 30px; }
+  .find-gemstone-results a p {
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    color: #0c5535; }
+    .find-gemstone-results a p:before {
+      content: '$'; }
+    .find-gemstone-results a p:after {
+      content: ' CAD'; }
+
+@media screen and (min-width: 600px) {
+  .find-gemstone-results .display-product-results {
+    grid-template-columns: repeat(3, 1fr); } }
+
+@media screen and (min-width: 900px) {
+  .find-gemstone-results .display-product-results {
+    grid-template-columns: repeat(4, 1fr); } }
 
 /*
 =========================
