search function is working and search result style is complete

--- a/themes/daria-day/sass/abstracts/_variables.scss
+++ b/themes/daria-day/sass/abstracts/_variables.scss
@@ -8,7 +8,8 @@ $menu-spacing: 10px;
 $menu-border-size: 2px;
 
 // Colours
-$brand-colour-green: #0c5535;
+$brand-colour-green: #0c5535; 
+$brand-background-colour: #269a65;
 $brand-colour-evergreen: #062b35;
 
 $nav-grey: #e1e1e1;
