--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -80,7 +80,6 @@ sass/
 General
 =========================
 */
-
 ul, li {
   list-style: none;
 }
@@ -91,4 +90,9 @@ a {
 
 body {
   background-color: white;
+}
+h1.page-title{
+  font-family: 'Playfair Display';
+  padding: 20px 40px;
+  color: #062b35;
 }
