--- a/themes/daria-day/sass/_hero.scss
+++ b/themes/daria-day/sass/_hero.scss
@@ -4,7 +4,7 @@
 */
 .home-hero {
     align-items: center;
-    background: linear-gradient(180deg,rgba(0,0,0,.3) 0,rgba(0,0,0,.2)),#969696 url('/wp-content/themes/daria-day/images/mobile-hero.png') no-repeat;
+    background:  url('../../images/mobile-hero.png') no-repeat;
     background-size: cover;
     background-position: 50% 30%;
     display: -ms-flexbox;
@@ -14,28 +14,28 @@
     -ms-flex-pack: center;
     justify-content: center;
     height: 100vh;
-    width: 100%;
     .hero-title{
-        font-family: 'PlayfairDisplay';
-        font-size: 32px;
+        font-family: 'Playfair Display';
+        font-size: 30px;
         font-weight: bold;
         padding: 0px 50px 10px 50px;
         text-align: center;
         line-height: 50px;
-        color: #062b35;
+        color: $brand-colour-evergreen;
       }
       .hero-sub-title{
-        font-family: 'AvenirNext';
-        font-size: 21px;
+        font-family: 'Avenir LT Std';
+        font-size: 20px;
         text-align: center;
-        color: #062b35;
+        color: $brand-colour-evergreen;
         line-height: 30px;
         padding: 0px 50px 10px 80px;
       }
       .hero-btn{
+        font-family: 'Avenir LT Std';
         width: 200px;
         height: 70px;
-        background-color: #269a65;
+        background-color: $brand-background-colour;
         border: none;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
       }
@@ -51,39 +51,82 @@
       .hero-btn a{
           text-decoration: none;
       }
-  }
-@media only screen and (min-width: 600px) {
+}
+@media screen and (min-width: $tablet) {
   .home-hero {
-    display: flex;
-    justify-items: left;
+    background:url('../../images/home-hero.png') no-repeat center center;
+    background-size: cover;
+    background-position: 60% 20%;
     .hero-title{
-      font-size: 42px;
-      text-align: left;
+      font-size: 35px;
+      
     }
     .hero-sub-title{
-      font-size: 30px;
-      text-align: left;
-      line-height: 30px;
-      padding: 0px 50px 10px 80px;
+      font-size: 25px;
     }
     .home-hero button{
-      display: flex;
-      width: 350px;
-      height: 70px;
-      align-items: left;
+     
     }
     .hero-btn:hover{
-      box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
-      cursor: pointer;
-      border-radius: 10px;
+      
     }
     .hero-btn p{
-      color: #fff;
-      font-size: 20px;
+      
     }
     .hero-btn a{
         text-decoration: none;
     }
+  }
+}
+@media screen and (min-width: $desktop) {
+  .home-hero {
+    background: url('../../images/home-hero.png') no-repeat center center;
+    background-size: cover;
+    background-position: 60% 20%;
+    .hero-title{
+      font-size: 50px;
+      width: 840px; 
+      line-height: 80px; 
+      justify-items: left;
+      text-align: left;
+      margin-left: -28%;
+      float: left; 
+    }
+    .hero-sub-title{
+      margin-top: -20px; 
+      font-size: 30px;
+      margin-left: -29%;
+      letter-spacing: 1px; 
+    }
+    .hero-btn{
+     margin-left: -211%;
+     width: 250px;
+    }
+    .hero-btn:hover{
+      
+    }
+    .hero-btn p{
+      font-size: 25px; 
+    }
+    .hero-btn a{
+        text-decoration: none;
+    }
+  }
+}
+/* ====================================================================
+      Social Media and Mailchimp together in tablet and desktop view. 
+    ===================================================================== */
+
+.socialmedia-mailchimp{
+  display: flex;
+  flex-flow: column;
+  padding: 20px;
+}
+@media screen and (min-width: $tablet){
+  .socialmedia-mailchimp{
+    flex-flow: row;
+    justify-content: space-evenly;
+    padding: 0 20px;
   }
 }
 /* =========================
@@ -93,49 +136,73 @@
     text-align: center;
 
      .subscription-title {
-        font-family: 'PlayfairDisplay';
-        font-size: 32px;
-        color: #062b35;
+        font-family: 'Playfair Display';
+        font-size: 30px;
+        color: $brand-colour-evergreen;
       }
       .subscription-sub-title{
-        font-family: 'AvenirNext';
-        font-size: 21px;
-        color: #062b35;
+        font-family: 'Avenir LT Std';
+        font-size: 20px;
+        color: $brand-colour-evergreen;
         line-height: 30px;
       }
       .text-input{
         width: 200px;
         height: 36px;
         padding: 1px 10px;
-        border: solid 1px #269a65;
+        border: solid 1px $brand-background-colour;
         background-color: #ffffff;
-        cursor: pointer;
         padding-left: -2px;
       }
       .signupbtn {
+        font-family: 'Avenir LT Std';
         width: 112px;
         height: 40px;
         color: #fff;
         margin-left: -10px;
         cursor: pointer;
-        border: solid 1px #269a65;
-        background-color: #269a65;
+        border: solid 1px $brand-background-colour;
+        background-color: $brand-background-colour;
       }
       .signupbtn:hover{
         width: 113px;
         height: 40px;
       }
 }
-
+@media screen and (min-width: $desktop){
+  .subscription{
+    .subscription-title{
+      font-size: 40px;
+    }
+    .subscription-sub-title{
+      font-size: 25px;
+      line-height: 32px;
+    }
+    .text-input{
+      width: 220px;
+      height: 41px;
+    }
+    .signupbtn {
+      font-size: 18px;
+      width: 118px;
+      height: 45px;
+      border-bottom: 2.5px solid $brand-background-colour;
+    }
+    .signupbtn:hover{
+      width: 118px;
+      height: 45px;
+    }
+  }
+}
 /* =========================
       Social Media Section
    ========================= */
 .social-media{
   text-align: center;
   .social-media-title {
-    font-family: 'PlayfairDisplay';
-    font-size: 32px;
-    color: #062b35;
+    font-family: 'Playfair Display';
+    font-size: 30px;
+    color: $brand-colour-evergreen;
   }
   .social-media-icons img{
     width: 50px;
@@ -147,77 +214,179 @@
     height: 51px;
   }
 }
+@media screen and (min-width: $desktop){
+  .social-media{
+    .social-media-title {
+      font-size: 40px;
+    }
+    .social-media-icons img{
+      width: 60px;
+      height: 60px;
+    }
+    .social-media-icons img:hover{
+      width: 61px;
+      height: 61px;
+    }
+  }
+}
 
 /* =========================
       Search Result Page
    ========================= */
 
-.search-result{
-  font-family: 'Avenir';
-  display: flex;
-  flex-flow: column;
-  color: #062b35;
-  padding: 20px;
+.search-result-container{
+  color: $brand-colour-evergreen;
+  padding-left: 40px;
 
   a{
-    color: #062b35;
-    text-decoration: none;
+    font-size: 1.2em; 
+    color: $brand-colour-evergreen;
   }
-  .post-categories {
-    list-style: none;
+  .search-price{
+    font-size: 0.8em;
+    color: $brand-colour-evergreen;
   }
-  .search-title {
-    font-family: 'PlayfairDisplay';
-    font-size: 32px;
+  img{
+    height: 150px;
+    width: 150px;
   }
   
-  .search-thumbnail{
-    display: flex;
-    justify-content:  center;
-    img{
-      height: 300px;
-      width: 540px;
-      border-radius: 10px;
-    }
-  }
-  .search-excerpt {
-    display: flex;
-  }
-  .search-post-date {
-    a{
-      text-decoration: none;
-      color: #062b35;
-    }
-    
+  .search-price{
+    width: 300px;
+    color: $brand-colour-evergreen;
   }
   a:hover{
-    color: #0d5468;
+      color: #0d5468;
   }
 }
 .hr{
   color: #cdcdcd;
 }
-.page-title {
-  font-family: 'PlayfairDisplay';
-  font-size: 32px;
-  padding: 0 20px;
+@media screen and (min-width: $tablet){
+  .search-result-container{
+    a{
+      font-size: 1.5em; 
+      margin-left: 180px; 
+      width: 300px;
+    }
+    img{
+        margin-top: -90px; 
+        height: 150px;
+        width: 150px;
+    }
+    .search-price{
+        margin-left: 180px; 
+        width: 300px;
+        color: $brand-colour-evergreen;
+    }
+  }
+}
+@media screen and (min-width: $desktop){
+  .search-result-container {
+    a{
+      font-size: 1.6em; 
+      margin-left: 200px; 
+      width: 300px;
+    }
+    img{
+        margin-top: -90px; 
+        height: 180px;
+        width: 180px;
+    }
+    .search-price{
+        font-size: 0.8em;
+        margin-left: 200px; 
+        width: 300px;
+        color: $brand-colour-evergreen;
+    }
+  }
 }
   
-/* =========================
+/* ===================================
       Latest Additions Section
-   ========================= */
-.latest-additions{
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  list-style: none;
-  font-size: .8em;
-}
-.latest-additions-item{
-  display: flex;
-  flex-direction: column;
+   ====================================== */
+.latest-additions-container {
+  padding: 10px 20px 25px 20px; 
+  h1{
+    padding-left: 40px; 
+  }
+  .latest-additions {
+    justify-items: center; 
+    padding: 10px; 
+    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 2fr 2fr; 
+    grid-row-gap: 100px; 
+    list-style: none;
+    font-size: .8em;
+  }
+  img{
+    padding: 10px 0; 
+  }
+  
+  p{
+    font-family: 'Avenir LT Std';
+    font-weight: lighter;
+    font-size: 17px;
+    color: $brand-colour-green;
+  }
   a{
-    text-decoration: none;
+    font-size: 17px;
+    text-decoration: none; 
+    color: $brand-colour-evergreen;
+  }
+  a:hover{
+    color: $brand-background-colour;
+  }
+  .latest-additions-item{
+    display: flex;
+    width: 18em;
+    height: 18em;
+    flex-direction: column;
+    a{
+      text-decoration: none;
+    }
+    img{
+      width: 18em;
+      height: 18em;
+    }
+  }
+}
+@media screen and (min-width: $tablet){
+  .latest-additions-container {
+    margin-bottom: 20px; 
+    .latest-additions {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .latest-additions-item{
+      width: 17em;
+      height: 17em;
+      img{
+        width: 17em;
+        height: 17em;
+      }
+    }
+  }
+}
+@media screen and (min-width: $desktop){
+  .latest-additions-container {
+    margin-bottom: 20px; 
+    
+    .latest-additions {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .latest-additions-item{
+      width: 20em;
+      height: 20em;
+      img{
+        width: 20em;
+        height: 20em;
+      }
+      a{
+        width: 19em;
+      }
+    }
   }
 }
