--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -396,8 +396,7 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.2))), #969696 url("/wp-content/themes/daria-day/images/mobile-hero.png") no-repeat;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0, rgba(0, 0, 0, 0.2)), #969696 url("/wp-content/themes/daria-day/images/mobile-hero.png") no-repeat;
+  background: url("../../images/mobile-hero.png") no-repeat;
   background-size: cover;
   background-position: 50% 30%;
   display: -ms-flexbox;
@@ -410,24 +409,24 @@ template {
   -ms-flex-pack: center;
   -webkit-box-pack: center;
           justify-content: center;
-  height: 100vh;
-  width: 100%; }
+  height: 100vh; }
   .home-hero .hero-title {
-    font-family: 'PlayfairDisplay';
-    font-size: 32px;
+    font-family: 'Playfair Display';
+    font-size: 30px;
     font-weight: bold;
     padding: 0px 50px 10px 50px;
     text-align: center;
     line-height: 50px;
     color: #062b35; }
   .home-hero .hero-sub-title {
-    font-family: 'AvenirNext';
-    font-size: 21px;
+    font-family: 'Avenir LT Std';
+    font-size: 20px;
     text-align: center;
     color: #062b35;
     line-height: 30px;
     padding: 0px 50px 10px 80px; }
   .home-hero .hero-btn {
+    font-family: 'Avenir LT Std';
     width: 200px;
     height: 70px;
     background-color: #269a65;
@@ -445,39 +444,67 @@ template {
   .home-hero .hero-btn a {
     text-decoration: none; }
 
-@media only screen and (min-width: 600px) {
+@media screen and (min-width: 600px) {
   .home-hero {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    justify-items: left; }
+    background: url("../../images/home-hero.png") no-repeat center center;
+    background-size: cover;
+    background-position: 60% 20%; }
     .home-hero .hero-title {
-      font-size: 42px;
-      text-align: left; }
+      font-size: 35px; }
     .home-hero .hero-sub-title {
-      font-size: 30px;
-      text-align: left;
-      line-height: 30px;
-      padding: 0px 50px 10px 80px; }
-    .home-hero .home-hero button {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      width: 350px;
-      height: 70px;
-      -webkit-box-align: left;
-          -ms-flex-align: left;
-              align-items: left; }
-    .home-hero .hero-btn:hover {
-      -webkit-box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
-              box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
-      cursor: pointer;
-      border-radius: 10px; }
-    .home-hero .hero-btn p {
-      color: #fff;
-      font-size: 20px; }
+      font-size: 25px; }
     .home-hero .hero-btn a {
       text-decoration: none; } }
+
+@media screen and (min-width: 1024px) {
+  .home-hero {
+    background: url("../../images/home-hero.png") no-repeat center center;
+    background-size: cover;
+    background-position: 60% 20%; }
+    .home-hero .hero-title {
+      font-size: 50px;
+      width: 840px;
+      line-height: 80px;
+      justify-items: left;
+      text-align: left;
+      margin-left: -28%;
+      float: left; }
+    .home-hero .hero-sub-title {
+      margin-top: -20px;
+      font-size: 30px;
+      margin-left: -29%;
+      letter-spacing: 1px; }
+    .home-hero .hero-btn {
+      margin-left: -211%;
+      width: 250px; }
+    .home-hero .hero-btn p {
+      font-size: 25px; }
+    .home-hero .hero-btn a {
+      text-decoration: none; } }
+
+/* ====================================================================
+      Social Media and Mailchimp together in tablet and desktop view. 
+    ===================================================================== */
+.socialmedia-mailchimp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  padding: 20px; }
+
+@media screen and (min-width: 600px) {
+  .socialmedia-mailchimp {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: 0 20px; } }
 
 /* =========================
       Subscription Section
@@ -485,12 +512,12 @@ template {
 .subscription {
   text-align: center; }
   .subscription .subscription-title {
-    font-family: 'PlayfairDisplay';
-    font-size: 32px;
+    font-family: 'Playfair Display';
+    font-size: 30px;
     color: #062b35; }
   .subscription .subscription-sub-title {
-    font-family: 'AvenirNext';
-    font-size: 21px;
+    font-family: 'Avenir LT Std';
+    font-size: 20px;
     color: #062b35;
     line-height: 30px; }
   .subscription .text-input {
@@ -499,9 +526,9 @@ template {
     padding: 1px 10px;
     border: solid 1px #269a65;
     background-color: #ffffff;
-    cursor: pointer;
     padding-left: -2px; }
   .subscription .signupbtn {
+    font-family: 'Avenir LT Std';
     width: 112px;
     height: 40px;
     color: #fff;
@@ -513,14 +540,32 @@ template {
     width: 113px;
     height: 40px; }
 
+@media screen and (min-width: 1024px) {
+  .subscription .subscription-title {
+    font-size: 40px; }
+  .subscription .subscription-sub-title {
+    font-size: 25px;
+    line-height: 32px; }
+  .subscription .text-input {
+    width: 220px;
+    height: 41px; }
+  .subscription .signupbtn {
+    font-size: 18px;
+    width: 118px;
+    height: 45px;
+    border-bottom: 2.5px solid #269a65; }
+  .subscription .signupbtn:hover {
+    width: 118px;
+    height: 45px; } }
+
 /* =========================
       Social Media Section
    ========================= */
 .social-media {
   text-align: center; }
   .social-media .social-media-title {
-    font-family: 'PlayfairDisplay';
-    font-size: 32px;
+    font-family: 'Playfair Display';
+    font-size: 30px;
     color: #062b35; }
   .social-media .social-media-icons img {
     width: 50px;
@@ -530,78 +575,143 @@ template {
     width: 51px;
     height: 51px; }
 
+@media screen and (min-width: 1024px) {
+  .social-media .social-media-title {
+    font-size: 40px; }
+  .social-media .social-media-icons img {
+    width: 60px;
+    height: 60px; }
+  .social-media .social-media-icons img:hover {
+    width: 61px;
+    height: 61px; } }
+
 /* =========================
       Search Result Page
    ========================= */
-.search-result {
-  font-family: 'Avenir';
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column;
-          flex-flow: column;
+.search-result-container {
   color: #062b35;
-  padding: 20px; }
-  .search-result a {
-    color: #062b35;
-    text-decoration: none; }
-  .search-result .post-categories {
-    list-style: none; }
-  .search-result .search-title {
-    font-family: 'PlayfairDisplay';
-    font-size: 32px; }
-  .search-result .search-thumbnail {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-    .search-result .search-thumbnail img {
-      height: 300px;
-      width: 540px;
-      border-radius: 10px; }
-  .search-result .search-excerpt {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex; }
-  .search-result .search-post-date a {
-    text-decoration: none;
+  padding-left: 40px; }
+  .search-result-container a {
+    font-size: 1.2em;
     color: #062b35; }
-  .search-result a:hover {
+  .search-result-container .search-price {
+    font-size: 0.8em;
+    color: #062b35; }
+  .search-result-container img {
+    height: 150px;
+    width: 150px; }
+  .search-result-container .search-price {
+    width: 300px;
+    color: #062b35; }
+  .search-result-container a:hover {
     color: #0d5468; }
 
 .hr {
   color: #cdcdcd; }
 
-.page-title {
-  font-family: 'PlayfairDisplay';
-  font-size: 32px;
-  padding: 0 20px; }
+@media screen and (min-width: 600px) {
+  .search-result-container a {
+    font-size: 1.5em;
+    margin-left: 180px;
+    width: 300px; }
+  .search-result-container img {
+    margin-top: -90px;
+    height: 150px;
+    width: 150px; }
+  .search-result-container .search-price {
+    margin-left: 180px;
+    width: 300px;
+    color: #062b35; } }
 
-/* =========================
+@media screen and (min-width: 1024px) {
+  .search-result-container a {
+    font-size: 1.6em;
+    margin-left: 200px;
+    width: 300px; }
+  .search-result-container img {
+    margin-top: -90px;
+    height: 180px;
+    width: 180px; }
+  .search-result-container .search-price {
+    font-size: 0.8em;
+    margin-left: 200px;
+    width: 300px;
+    color: #062b35; } }
+
+/* ===================================
       Latest Additions Section
-   ========================= */
-.latest-additions {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-  list-style: none;
-  font-size: .8em; }
+   ====================================== */
+.latest-additions-container {
+  padding: 10px 20px 25px 20px; }
+  .latest-additions-container h1 {
+    padding-left: 40px; }
+  .latest-additions-container .latest-additions {
+    justify-items: center;
+    padding: 10px;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-row-gap: 100px;
+    list-style: none;
+    font-size: .8em; }
+  .latest-additions-container img {
+    padding: 10px 0; }
+  .latest-additions-container p {
+    font-family: 'Avenir LT Std';
+    font-weight: lighter;
+    font-size: 17px;
+    color: #0c5535; }
+  .latest-additions-container a {
+    font-size: 17px;
+    text-decoration: none;
+    color: #062b35; }
+  .latest-additions-container a:hover {
+    color: #269a65; }
+  .latest-additions-container .latest-additions-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 18em;
+    height: 18em;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+    .latest-additions-container .latest-additions-item a {
+      text-decoration: none; }
+    .latest-additions-container .latest-additions-item img {
+      width: 18em;
+      height: 18em; }
 
-.latest-additions-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column; }
-  .latest-additions-item a {
-    text-decoration: none; }
+@media screen and (min-width: 600px) {
+  .latest-additions-container {
+    margin-bottom: 20px; }
+    .latest-additions-container .latest-additions {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr; }
+    .latest-additions-container .latest-additions-item {
+      width: 17em;
+      height: 17em; }
+      .latest-additions-container .latest-additions-item img {
+        width: 17em;
+        height: 17em; } }
+
+@media screen and (min-width: 1024px) {
+  .latest-additions-container {
+    margin-bottom: 20px; }
+    .latest-additions-container .latest-additions {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr 1fr; }
+    .latest-additions-container .latest-additions-item {
+      width: 20em;
+      height: 20em; }
+      .latest-additions-container .latest-additions-item img {
+        width: 20em;
+        height: 20em; }
+      .latest-additions-container .latest-additions-item a {
+        width: 19em; } }
 
 .slider {
   text-align: center;
@@ -859,8 +969,7 @@ template {
 
 .footer {
   background-color: #062B35;
-  margin-top: 5%;
-  width: 100%;
+  margin-top: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -872,23 +981,23 @@ template {
     margin-top: 3%; }
   .footer h3 {
     color: white;
-    font-family: Avenir;
-    font-size: 1.2em; }
+    font-family: 'Avenir LT Std';
+    font-size: 30px; }
   .footer a {
     text-decoration: none;
     color: white;
-    font-family: Avenir;
+    font-family: 'Avenir LT Std';
     font-weight: 100;
-    font-size: .8em; }
+    font-size: 20px; }
   .footer a:hover {
-    color: red;
+    color: #e1e1e1;
     text-decoration: none;
     cursor: pointer; }
   .footer #darialogo, .footer div#products, .footer div#company, .footer div#customers {
     text-align: center; }
 
 #darialogo {
-  background-image: url("../../images/DariaDay_logo-02 white.svg");
+  background: url("../../images/white-logo.svg");
   background-repeat: no-repeat;
   background-size: 125px 175px; }
 
@@ -898,11 +1007,40 @@ template {
     .footer .companyinfo {
       display: -webkit-box;
       display: -ms-flexbox;
-      display: flex; } }
+      display: flex; }
+    .footer h3 {
+      padding-right: 40px;
+      -webkit-box-pack: justify;
+          -ms-flex-pack: justify;
+              justify-content: space-between; } }
 
 @media screen and (min-width: 600px) {
-  .footer {
-    display: grid; } }
+  .footer .companyinfo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    text-align: left; }
+  .footer h3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-right: 20px;
+    justify-items: space-evenly; }
+  .footer a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    text-align: left; } }
 
 .ourstory {
   background-color: #062B35;
@@ -1040,3 +1178,8 @@ a {
 
 body {
   background-color: white; }
+
+h1.page-title {
+  font-family: 'Playfair Display';
+  padding: 20px 40px;
+  color: #062b35; }
