--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -627,5 +627,20 @@ div#company {
 div#customers {
   text-align: center; }
 
-body {
-  background-color: white; }
+.wps-product-link {
+  text-decoration: none; }
+
+@media (max-width: 700px) {
+  .wps-products-img {
+    height: 8.5em;
+    width: 8.5em; }
+  .wps-product-gallery-imgs img {
+    -webkit-transform: scale(1.5);
+            transform: scale(1.5); }
+  .wps-product-thumbs {
+    display: none; } }
+
+@media (min-width: 700px) and (max-width: 1200px) {
+  .wps-products-img {
+    height: 16em;
+    width: 16em; } }
